Fix code and cleanups